<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        app:layout_constraintTop_toTopOf="@id/searchEditText"
        app:layout_constraintBottom_toBottomOf="@id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/historyLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clearHistoryButton" />

    <Button
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:textSize="12sp"
        android:visibility="gone"
        style="?attr/borderlessButtonStyle"
        app:layout_constraintTop_toTopOf="@id/historyLabel"
        app:layout_constraintBottom_toBottomOf="@id/historyLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/historyLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
