<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_md">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/photoCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="@dimen/corner_radius_sm"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/waypointPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_placeholder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePhotoButton"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:text="@string/take_photo"
                app:icon="@drawable/ic_camera" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.Compassor.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/waypoint_name_hint"
            app:layout_constraintTop_toBottomOf="@id/photoCard">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/remarksInputLayout"
            style="@style/Widget.Compassor.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/remarks_hint"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/remarksEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/coordinatesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintTop_toBottomOf="@id/remarksInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>